[package]
name = "niceperf"
description = "Basically iperf but with a few quality of life improvements performance tool."
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap-serde = "*"
clap = "*"
tokio-util = { version = "0.6", features = ["codec", "io"] }
socket2 = "*"

