[package]
name = "latency"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = {version = "*", features=["full"]}
socket2 = {version="*", features=["all"]}
serde_bytes = "*"
serde = {version = "*", features = ["derive"]}
bincode = "*"
clap = { version = "4", features = ["derive"] }
common = { path = "../common" }
anyhow = {}
etherparse = "0.13.0"
rand = "0.8.5"
tokio-util = "*"
futures = "*"
futures-util = "*"
ctor = {}
libc = "*"

[dependencies.uuid]
version = "1.3.0"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]
