[package]
name = "latency"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = {version = "*", features=["full"]}
socket2 = {version="*", features=["all"]}
serde_bytes = "*"
serde = {version = "*", features = ["derive"]}
bincode = "*"
clap = { version = "4", features = ["derive"] }
common = { path = "../common" }
anyhow = { workspace = true}
etherparse = "0.13.0"
rand = "0.8.5"
tokio-util = "*"
futures = "*"
futures-util = "*"
libc = "*"
async-trait = "0.1.68"
enum_dispatch = "0.3"
tokio-stream = "0.1.14"
serde_json = "1.0.104"
smol = "1.3.0"
polling = "*"
quinn-proto = {git = "https://github.com/suhrm/quinn.git", branch = "main"}
quinn = {git = "https://github.com/suhrm/quinn.git", branch = "main"}
rustls = { version = "*", features = ["dangerous_configuration", "quic"] }
mock_instant = "0.3.1"
bytes = "1.5.0"
rustix = "0.38.15"
timerfd = "1.5.0"
ringbuf = "0.3.3"
[dependencies.uuid]
version = "1.3.0"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]
