[package]
name = "logging-macro"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
syn = {version = "2.0", features = ["extra-traits"]}
quote = "1.0.33"
proc-macro2 = "1.0"
tokio = {version = "*", features=["full"]}
anyhow = {workspace = true}

[lib]
proc-macro = true
