[package]
name = "ping"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = {version = "*", features=["full"]}
socket2 = {version="*", features=["all"]}
serde_bytes = "*"
serde = {version = "*", features = ["derive"]}
bincode = "*"
clap = { version = "4", features = ["derive"] }
common = { path = "../common" }
anyhow = {}
