[package]
name = "ping"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = {version = "*", features=["full"]}
socket2 = {version="*", features=["all"]}
serde_bytes = "*"
serde = {version = "*", features = ["derive"]}
bincode = "*"
clap = { version = "4", features = ["derive"] }
common = { path = "../common" }
anyhow = {}
etherparse = "0.13.0"
rand = "0.8.5"
tokio-util = "*"
futures = "*"
futures-util = "*"
ctor = {}
console-subscriber = "0.2.0"
polling = "3.2.0"
nix = {version= "0.27.1" , features=["time"]}
egui = "0.23.0"
egui_plot = "0.23.0"
eframe = "0.23.0"

